--- a/src/Monitor/Monitor.csproj
+++ b/src/Monitor/Monitor.csproj
@@ -5,4 +5,8 @@
         <TargetFramework>netcoreapp2.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Topshelf" Version="4.1.0" />
+    </ItemGroup>
+
 </Project>
