--- a/src/Monitor/Monitor.csproj
+++ b/src/Monitor/Monitor.csproj
@@ -6,7 +6,16 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
+      <PackageReference Include="NetEscapades.Configuration.Yaml" Version="1.5.0" />
       <PackageReference Include="Topshelf" Version="4.1.0" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="config.yml">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
