--- a/src/Monitor/Monitor.csproj
+++ b/src/Monitor/Monitor.csproj
@@ -6,6 +6,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentEmail.Core" Version="2.5.1" />
+      <PackageReference Include="FluentEmail.Smtp" Version="2.5.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
       <PackageReference Include="NetEscapades.Configuration.Yaml" Version="1.5.0" />
