Removed TopShelf, used IHostedService

--- a/src/Monitor/Monitor.csproj
+++ b/src/Monitor/Monitor.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.1</TargetFramework>
+        <LangVersion>7.1</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -10,14 +11,24 @@
       <PackageReference Include="FluentEmail.Smtp" Version="2.5.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
+      <PackageReference Include="Microsoft.Extensions.Hosting" Version="2.1.1" />
       <PackageReference Include="NetEscapades.Configuration.Yaml" Version="1.5.0" />
-      <PackageReference Include="Topshelf" Version="4.1.0" />
+      <PackageReference Include="NLog.Extensions.Logging" Version="1.3.0" />
     </ItemGroup>
 
     <ItemGroup>
       <None Update="config.yml">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
+      <None Update="NLog.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="System.ServiceProcess.ServiceController, Version=4.2.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+        <HintPath>C:\Users\Markeli\.nuget\packages\system.serviceprocess.servicecontroller\4.5.0\ref\netstandard2.0\System.ServiceProcess.ServiceController.dll</HintPath>
+      </Reference>
     </ItemGroup>
 
 </Project>
