Added logging, made app more robust

--- a/src/Monitor/config.yml
+++ b/src/Monitor/config.yml
@@ -4,7 +4,7 @@ MachineName: local
 EmailConfiguration:
   Host: smtp.gmail.com
   Port: 465
-  Email: 
+  Email: maxim.markelow@siisltd.ru
   Password: 
   
 Emails:
