--- a/src/Monitor/config.yml
+++ b/src/Monitor/config.yml
@@ -1,15 +1,5 @@
 CheckPeriodSec: 10
 MachineName: local
-
-EmailConfiguration:
-  Host: smtp.mail.ru
-  Port: 587
-  Email: 
-  Password: 
-  EnableSsl: true
-  
-Emails:
-  - max.markelow@gmail.com
   
 Drives:
   - DeviceName: C
@@ -21,3 +11,12 @@ Drives:
     ThresholdValue: 0.8
     TriggerMode: Percentile
     MeasurementUnit: GB
+    
+#EmailConfiguration:
+#  Host: smtp.mail.ru
+#  Port: 587
+
+#  EnableSsl: true
+#  Recipients:
+#  - max.markelow@gmail.com
+#
