Adde options for running as a service and showing help

--- a/src/FreeSpaceAlert/NLog.config
+++ b/src/FreeSpaceAlert/NLog.config
@@ -7,10 +7,10 @@
     <targets>
         <target xsi:type="ColoredConsole"
                 name="console"
-                layout="${longdate} ${level:upperCase=true} ${message}}"
+                layout="${longdate} ${level:upperCase=true} ${message}"
                 detectConsoleAvailable="true" />
         <target name="loggerFile" xsi:type="File"
-                layout="${longdate} ${logger} ${level:upperCase=true} ${message}}"
+                layout="${longdate} ${logger} ${level:upperCase=true} ${message}"
                 fileName="${basedir}/logs/info.log"
                 archiveFileName="${basedir}/logs/archive/logs_{#}.zip"
                 archiveEvery="Day"
