--- a/src/FreeSpaceAlert/FreeSpaceAlert.csproj
+++ b/src/FreeSpaceAlert/FreeSpaceAlert.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
     
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>netcoreapp2.1</TargetFramework>
         <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
         <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
         <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
