Renamed project to FreeDiskSpaceAlert

--- a/src/FreeDiskSpaceAlert/FreeDiskSpaceAlert.csproj
+++ b/src/FreeDiskSpaceAlert/FreeDiskSpaceAlert.csproj
@@ -4,7 +4,8 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <LangVersion>7.3</LangVersion>
-        <AssemblyName>FreeSpaceAlert</AssemblyName>
+        <AssemblyName>FreeDiskSpaceAlert</AssemblyName>
+        <RootNamespace>FreeDiskSpaceAlert</RootNamespace>
     </PropertyGroup>
     
     <PropertyGroup>
