--- a/src/FreeDiskSpaceAlert/FreeDiskSpaceAlert.csproj
+++ b/src/FreeDiskSpaceAlert/FreeDiskSpaceAlert.csproj
@@ -4,7 +4,7 @@
         <OutputType>Exe</OutputType>
         <TargetFramework>netcoreapp2.1</TargetFramework>
         <LangVersion>7.3</LangVersion>
-        <AssemblyName>FreeDiskSpaceAlert</AssemblyName>
+        <AssemblyName>fdsa</AssemblyName>
         <RootNamespace>FreeDiskSpaceAlert</RootNamespace>
     </PropertyGroup>
     
